[metadata]
name = panhan
version = attr: panhan.__version__
description = Pandoc configuration handler.
long_description = file: README.md
author = Dominic Thorn
author_email = dominic.thorn@gmail.com
keywords = pandoc, markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10.4
install_requires =
    pypandoc >=1.7.2
    python-frontmatter >=1.0.0
    PyYAML >=6.0

[options.entry_points]
console_scripts =
    panhan = panhan.main:cli